<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Share selected PDFs -->
    <item
        android:id="@+id/action_share_selected"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:iconTint="@color/white"
        app:showAsAction="always" />

    <!-- Delete selected PDFs -->
    <item
        android:id="@+id/action_delete_selected"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:iconTint="@color/white"
        app:showAsAction="always" />

    <!-- Merge selected PDFs -->
    <item
        android:id="@+id/action_merge"
        android:icon="@drawable/ic_merge"
        android:title="@string/merge_pdfs"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <!-- Split PDF into pages -->
    <item
        android:id="@+id/action_split"
        android:icon="@drawable/ic_split"
        android:title="@string/split_pdf"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <!-- Compress selected PDF -->
    <item
        android:id="@+id/action_compress"
        android:icon="@drawable/ic_compress"
        android:title="@string/compress_pdf"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <!-- Select All -->
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

</menu>
